--- a/app/index.html
+++ b/app/index.html
@@ -3,13 +3,14 @@
 <head lang="en">
 	<meta charset="UTF-8">
 	<title>FitFire</title>
+	<link rel="stylesheet" href="css/style.css"/>
 </head>
 <body ng-controller="HitController">
-	<h3>{{ data }}</h3>
-	<script src="lib/angular.js"></script>
-	<script src="lib/angularfire.js"></script>
-	<script src="lib/firebase.js"></script>
-	<script src="lib/firebase-simple-login.js"></script>
+	<div ng-repeat="hit in hits" ng-click="hitClick(hit.id)" class="hit">{{ hit.name }}</div>
+	<script src="lib/angular/angular.js"></script>
+	<script src="lib/angularfire/dist/angularfire.js"></script>
+	<script src="lib/firebase/firebase.js"></script>
+	<script src="lib/firebase-simple-login/firebase-simple-login.js"></script>
 
 	<script src="js/app.js"></script>
 	<script src="js/services/hit.js"></script>
