--- a/app/index.html
+++ b/app/index.html
@@ -7,12 +7,21 @@
 </head>
 <body ng-controller="HitController">
 	<div ng-show="loadingHits">Loading...</div>
-	<div ng-repeat="hit in hits" ng-click="hitClick(hit.$id)" class="hit" ng-hide="loadingHits">{{ hit.name }}</div>
+	<!--<div ng-repeat="hit in hits" ng-click="hitClick(hit.$id)" class="hit" ng-hide="loadingHits">{{ hit.name }}</div>-->
+
+	<div id="hit1" class="hit" ng-click="hitClick()">1<br />{{ hitList.hit1 }}</div>
+	<div id="hit2" class="hit" ng-click="hitClick()">2<br />{{ hitList.hit2 }}</div>
+	<div id="hit3" class="hit" ng-click="hitClick()">3<br />{{ hitList.hit3 }}</div>
+
+	<a href="" ng-click="back()">&lt;&lt;</a>
+	<a href="" ng-click="forth()">&gt;&gt;</a>
+	{{ position }}
 
 	<script src="lib/angular/angular.js"></script>
 	<script src="lib/angularfire/dist/angularfire.js"></script>
 	<script src="lib/firebase/firebase.js"></script>
 	<script src="lib/firebase-simple-login/firebase-simple-login.js"></script>
+	<script src="lib/state-machine/state-machine.js"></script>
 
 	<script src="js/app.js"></script>
 	<script src="js/services/hit.js"></script>
